# Digit-Vision

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/screenshots/: README.md
config/: config.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INTERVIEW_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: artifacts.py  dataset.py  evaluate.py  gradcam.py  logger.py  model_card.py  predict.py  preprocessing.py  train.py
src/models/: __init__.py  custom_cnn.py  dense_nn.py  lenet5.py
streamlit_app/: _setup_path.py  app.py  home_content.py
streamlit_app/components/: cards.py  charts.py  styles.py
streamlit_app/pages/: 01_home.py  02_recognize.py  03_playground.py  04_analytics.py  05_cnn_explainer.py  06_dataset.py  07_about.py
tests/: conftest.py  test_artifacts.py  test_evaluate.py  test_gradcam.py  test_model_card.py  test_models.py  test_predict.py  test_preprocessing.py  test_streamlit_components.py  test_train.py
